# NanoFS

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  COMPREHENSIVE_TESTS.md  Cargo.toml  FINAL_TEST_VERIFICATION.md  NEW_TESTS_SUMMARY.md  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TESTING_CHECKLIST.md  TESTING_SUMMARY.md  TEST_PASS_SUMMARY.txt  TEST_RESULTS.md  TEST_STATUS.md  WEEK4_REPORT.md  build.bat  build.sh  check_env.bat  clean.bat  clean.sh  demo.sh  mkfs.modernfs  run_all_tests.sh  run_full_test_suite.sh  run_tests.sh  test_fuse.sh  test_fuse_auto.sh  test_fuse_simple.sh  usercontext.md
.claude/: settings.local.json
docs/: FIX_SUMMARY.md  IMPLEMENTATION.md  ISSUES.md  MEMORY_DEBUG.md  ModernFS_Hybrid_Plan.md  Phase0_Report.md  QUICKSTART.md  USER_GUIDE.md  WEEK10_PLAN.md  WEEK4_REPORT.md  WEEK5_REPORT.md  WEEK6_REPORT.md  WEEK7_REPORT.md  WEEK8_REPORT.md  WEEK9_PLAN.md  WEEK9_REPORT.md
include/modernfs/: block_alloc.h  block_dev.h  buffer_cache.h  directory.h  fs_context.h  fuse_ops.h  inode.h  path.h  rust_ffi.h  superblock.h  types.h
rust_core/: Cargo.toml
rust_core/src/: lib.rs
rust_core/src/extent/: mod.rs  types.rs
rust_core/src/journal/: mod.rs  types.rs
rust_core/src/transaction/: mod.rs
src/: block_alloc.c  block_dev.c  buffer_cache.c  directory.c  fs_context.c  fuse_ops.c  inode.c  main_fuse.c  mkfs.c  path.c  superblock.c  test_block_layer.c  test_dir_simple.c  test_dump_sb.c  test_ffi.c  test_file_write.c  test_inode_layer.c  test_journal.c  test_week7_integration.c
tests/: README.md
tests/concurrent/: test_concurrent_alloc.c  test_concurrent_writes.c
tests/crash/: crash_after_commit.sh  crash_during_write.sh  run_all.sh
tests/scripts/: test.bat  test_mount_and_write.sh  test_week8.sh  test_write.sh  test_write_debug.sh
tests/unit/: test_block_layer.c  test_dir_simple.c  test_error_handling.c  test_extent.c  test_fs_context_init.c  test_full_coverage.c  test_inode_layer.c  test_readdir.c  test_stress.c  test_week7_integration.c
tools/benchmark-rs/: Cargo.toml
tools/benchmark-rs/src/: main.rs
tools/fsck-rs/: Cargo.toml
tools/fsck-rs/src/: main.rs
tools/mkfs-rs/: Cargo.toml
tools/mkfs-rs/src/: main.rs
